# fixed_income_dashboard

./: pyproject.toml  requirements.txt  run.py
data/: dgs1.parquet  dgs10.parquet  dgs1mo.parquet  dgs2.parquet  dgs20.parquet  dgs30.parquet  dgs3mo.parquet  dgs5.parquet  dgs6mo.parquet  dgs7.parquet  lqd.parquet  t10y2y.parquet  tlt.parquet
services/data_ingestion/: fetch_bond_data.py
